Set theme jekyll-theme-dinky

--- a/_config.yml
+++ b/_config.yml
@@ -122,3 +122,5 @@ nav_v4: [
       ['Twitter',                   'notifier-twitter'          ],
       ['Zabbix',                    'notifier-zabbix'           ]
 ]
+
+theme: jekyll-theme-dinky
