spec: Fix rubocop offenses
Signed-off-by: Julien 'Lta' BALLET <contact@lta.io>

--- a/spec/.rubocop.yml
+++ b/spec/.rubocop.yml
@@ -15,3 +15,8 @@ Lint/AmbiguousBlockAssociation:
 Layout/IndentHeredoc:
   Enabled: false
 
+Style/EvalWithLocation:
+  Enabled: false
+
+Style/AccessModifierDeclarations:
+  Enabled: false
