--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -44,6 +44,9 @@ Layout/AlignHash:
 
 Layout/IndentFirstArrayElement:
   EnforcedStyle: consistent  
+
+Style/ClassAndModuleChildren:
+  Enabled: false
   
 Style/RegexpLiteral:
   EnforcedStyle: percent_r
